This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

28-Sep-2003 (Lars Duening)  (3.3.490)
  - (comm.c) Removed a crasher from set_max_commands() (thanks, Ralph!).

27-Sep-2003 (Lars Duening)  (3.3.489)
  - (autoconf) Renamed the option enable-use-array-calls to
      enable-lpc-array-calls, as it's a language option and not a package.

27-Sep-2003 (Lars Duening)  (3.3.488)
  - (efuns.c) Added a third argument to debug_info(DINFO_OBJLIST) to return
       multiple objects.
  - (comm, func_spec) New efuns set_max_commands(), get_max_commands()
       to control the number of commands allowed per second on a
       per-connection basis.
  - (svalue.h) Added macro put_float() to store floats into a svalue.
  - (lex, prolang.y) Pragma (no_)warn_empty_casts allows to turn off
       the warnings about ineffective casts.
  - (etc/lpc.vim) LPC syntax highlighting for vim (submitted by Coogan).
  - (autoconf, interpret.c, main.c, lex.c) The call_other() on arrays of
       objects is now configurable; if enabled, __LPC_ARRAY_CALLS__ is
       defined.
  - (mudlib/sys/commands.h) Added defines for the query_action() bitflags.
  - (array.c, mapping.c, pkg-alists.c, sprintf.c, xalloc.c, prolang.y)
       Removed a couple of signed/unsigned warnings (thanks, Ralph!).
  - (efuns.c) to_array(string) now treats the string characters as unsigned
       (reported by Fiona).

27-Sep-2003 (Lars Duening)  (3.3.487)
  - (prolang.y) Corrected some subtleties in the lfun/efun classification
      of functions, revealed by the recent change.
  - (simul_efun.c) The __INIT() function is no longer visible as simul-efun.

25-Sep-2003 (Lars Duening)  (3.3.486)
  - (prolang.y, lex) The driver crashed when a private lfun shadowing
      a public sefun was virtually inherited twice in parallel, because
      the public sefun inhibited a proper cross-definition of the second