@@ -3,7 +3,10 @@ SYNOPSIS
 
 DESCRIPTION
         Return a login object that the requested connection should be
-        bound to. Note that the connection is not bound yet.
+        bound to. 
+
+        Note that the connection is at this time bound to the master object,
+        and will be re-bound to the returned object.
 
         The lfun logon() will be applied to the login object after
         binding the connection to it. That lfun has to return != 0 to
