@@ -63,13 +63,16 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 490)
-(Parent-Version lpmud 3-3 489)
-(Version-Log "Fixed a crasher in set_max_commands().")
+(Project-Version lpmud 3-3 491)
+(Parent-Version lpmud 3-3 490)
+(Version-Log "Corrected the default for max_commands from 0 to -1.
+Clarified the status of the interactive connection at the time of master:;connect().
+Macros __RESET_TIME__ and __CLEANUP_TIME__ ignored overrides from the commandline.
+New efun master().")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Sun, 28 Sep 2003 10:55:32 -0600")
+(Checkin-Time "Tue, 30 Sep 2003 21:17:10 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -107,8 +110,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.68 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.553 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.334 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.554 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.335 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -175,7 +178,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.17 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.64 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.65 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.37 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -196,9 +199,9 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.37 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.40 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.41 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.7 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.63 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.64 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.49 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
@@ -311,7 +314,7 @@
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.2 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.20 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.21 644))
   (src/string_spec (lpmud/f/6_string_spe 1.14.1.12 644))
   (src/mkfunc.c (lpmud/l/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.30.1.7 644))
@@ -477,7 +480,7 @@
   (mudlib/dhrystone2.c (lpmud/a/b/13_dhrystone2 1.3 644))
   (mudlib/erq-tool.c (lpmud/d/31_erq.c 1.1 644))
   (mudlib/simul_efun-dr.c (lpmud/51_simul_efun 1.3 644))
-  (mudlib/master_skeleton.c (lpmud/b/2_master_ske 1.32 644))
+  (mudlib/master_skeleton.c (lpmud/b/2_master_ske 1.33 644))
   (mudlib/pgsql.c (lpmud/d/b/42_pgsql.c 1.1 644))
   (mudlib/telnet.h (lpmud/c/b/13_telnet.h 1.2 644))
   (mudlib/telnetneg.c (lpmud/c/b/14_telnetneg. 1.3 644))
@@ -1115,6 +1118,7 @@
   (doc/efun/mappingp (lpmud/c/40_mappingp 1.8 644))
   (doc/efun/map_indices (lpmud/m/8_map_indice 1.3.1.2 644))
   (doc/efun/map_objects (lpmud/p/11_map_object 1.1.1.1 644))
+  (doc/efun/master (lpmud/e/b/41_master 1.1 644))
   (doc/efun/match_command (lpmud/a/b/28_match_comm 1.2 644))
   (doc/efun/max (lpmud/k/41_max 1.2 644))
   (doc/efun/md5 (lpmud/l/20_md5_encryp 1.2 644))
@@ -1206,7 +1210,7 @@
   (doc/efun/set_is_wizard (lpmud/q/14_set_is_wiz 1.3 644))
   (doc/efun/set_light (lpmud/q/15_set_light 1.4 644))
   (doc/efun/set_limits (lpmud/d/36_set_limits 1.4 644))
-  (doc/efun/set_max_commands (lpmud/e/b/40_set_max_co 1.1 644))
+  (doc/efun/set_max_commands (lpmud/e/b/40_set_max_co 1.2 644))
   (doc/efun/set_modify_command (lpmud/q/17_set_modify 1.2.1.3 644))
   (doc/efun/set_next_reset (lpmud/l/5_set_next_r 1.6 644))
   (doc/efun/set_prompt (lpmud/q/18_set_prompt 1.2.1.1.1.1 644))
@@ -1373,7 +1377,7 @@
   (doc/LPC/while (lpmud/r/37_while 1.3 644))
 
   (doc/master/compile_object (lpmud/r/38_compile_ob 1.2 644))
-  (doc/master/connect (lpmud/r/39_connect 1.2 644))
+  (doc/master/connect (lpmud/r/39_connect 1.3 644))
   (doc/master/dangling_lfun_closure (lpmud/r/41_dangling_l 1.3 644))
   (doc/master/disconnect (lpmud/r/43_disconnect 1.5 644))
   (doc/master/epilog (lpmud/r/44_epilog 1.3 644))
