@@ -134,7 +134,7 @@ For a detailed list of all changes see the file CHANGELOG.
            x509 key- and certfile for the TLS package.
 
 
-27-Sep-2003 (Lars Duening) -- Release 3.2.10
+30-Sep-2003 (Lars Duening) -- Release 3.2.10
 
     - Changed efuns:
        + debug_info(): Removed the DID_MEM_UNUSED value from the DINFO_DATA:
@@ -173,6 +173,7 @@ For a detailed list of all changes see the file CHANGELOG.
            as unsigned.
 
     - New efuns:
+       + master(): Return the current master object.
        + m_entry(): Return all values for mapping entry at once.
        + rmember(): Search arrays and strings from the end.
        + get_combine_charset(), get_connection_charset(): Query the
